--- a/OrchardSkills.OrchardCore.OrchardCMS/OrchardSkills.OrchardCore.OrchardCMS.csproj
+++ b/OrchardSkills.OrchardCore.OrchardCMS/OrchardSkills.OrchardCore.OrchardCMS.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OrchardCore.Application.Cms.Targets" Version="1.0.0-rc1-11492" />
+    <PackageReference Include="OrchardCore.Application.Cms.Targets" Version="1.0.0-rc1-11550" />
   </ItemGroup>
 
   <ItemGroup>
